After first meeting on that scenarion

--- a/PITCHME/index.html
+++ b/PITCHME/index.html
@@ -108,7 +108,7 @@
                     <li style="font-size:1.2em; color:white" class="hidden-sd hidden-xs"><p class="navbar-text" style="color:white">/</p></li>
                     <li style="font-size:1.2em; color:white"><a href="#">powershellQuickStart</a></li>
                     <li><a href="#" style="font-size:1.2em;color:gray" class="hidden-sd hidden-xs">{
-                        PowerShell }</a></li>
+                        CSS }</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="visible-lg visible-md" style="font-size:1.1em; color:white"><a href="#"><span
